<resources>
    <string name="app_name">WeatherPilot</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="favourites">favourites</string>
    <string name="notification">notification</string>
    <string name="pressure">pressure</string>
    <string name="hpa">hpa</string>

    <style name="meter_per_second">m/s</style>

    <string name="windTextValue">"%1$s"</string>
    <string name="visibilityTextValue">m</string>
    <string name="cloudsTextValue">"%1$s %%"</string>
    <string name="humidityTextValue">%</string>
    <string name="timeValue">"%1$s %2$d"</string>
    <string name="tempWithParams">%1$s \u00B0 / %2$s \u00B0</string>
    <string name="temp_circle">\u00B0</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">kelvin</string>
    <string name="fahrenheit_type">F</string>
    <string name="celsius_type">C</string>
    <string name="kelvin_type">K</string>
    <string name="fahrenheit_symbol">\u2109</string>
    <string name="celsius_symbol">\u2103</string>
    <string name="kelvin_symbol">\u212A</string>
    <string name="wind">wind</string>
    <string name="humidity">humidity</string>
    <string name="visibility">visibility</string>
    <string name="clouds">clouds</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="latitudeType">latitude</string>
    <string name="go">Go</string>
    <string name="location">location</string>
    <string name="locationType">locationType</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="gps_type">GPS</string>
    <string name="map_type">Map</string>
    <string name="language">language</string>
    <string name="arabic">arabic</string>
    <string name="ar">ar</string>
    <string name="english">english</string>
    <string name="en">en</string>
    <string name="temperature">temperature</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="enabled_type">enabled</string>
    <string name="disabled_type">disabled</string>
    <string name="wind_speed">wind Speed</string>
    <string name="meter_sec">M/S</string>
    <string name="mile_hour">M/H</string>
    <string name="meter_sec_type">M/S</string>
    <string name="mile_hour_type">M/H</string>
    <string name="no_favourites">No Favourites</string>
    <string name="from_favourite_fragment">from favourite Fragment</string>
    <string name="previous">previous</string>
    <string name="we_need_location_tracking">we need location tracking</string>
    <string name="date">date</string>
    <string name="no_alerts">no Alerts</string>
    <string name="alerts">Alerts</string>
    <string name="from_regular_fragment">from regular fragment</string>
    <string name="initial_setup">initial setup</string>
    <string name="firstTime">first_time</string>
    <string name="turn_on_location_please">Turn on location please</string>
    <string name="give_location_permission">please we need the location permission \n you want to grant it ?</string>
    <string name="give_drawing_permission">please we need the drawing permission \n you want to grant it ?</string>
    <string name="give_notification_permission">please we need the notification permission \n you want to grant it ?</string>
    <string name="please_enable_location">please enable GPS \n do you want that ?</string>
    <string name="enable">enable</string>
    <string name="grant">grant</string>
    <string name="connection_lost">connection lost</string>
    <string name="search">search</string>
    <string name="from_alerts_fragment">from alerts Fragment</string>
    <string name="please_choose_place_on_the_map">please choose place on the map</string>
    <string name="time">time</string>
    <string name="broadcast_item">broadcastItem</string>
    <string name="weather_state">weather state</string>
    <string name="weather_is_fine_no_alerts_for_the_scheduled_period">weather is fine no alerts for the scheduled period</string>
    <string name="weather_alert">weather alert</string>
    <string name="alarm">alarm</string>
    <string name="alert">alert</string>
    <string name="item_object">item object</string>
    <string name="ok">OK</string>
    <string name="weather_database">weather_database</string>
    <string name="notificationtype">notificationType</string>
    <string name="alertType">alertType</string>
    <string name="languagetype">languageType</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="choose_alert_type">choose alert type</string>
    <string name="this_data_isn_t_updated">this data isn\'t updated</string>
    <string name="successful_insert">new pref is saved</string>
    <string name="unknown_error">something went wrong</string>
    <string name="image_url">"https://openweathermap.org/img/wn/${%1$s}@2x.png"</string>
    <string name="please_connect_to_internet">please connect to internet</string>


    <bool name="is_english">true</bool>
   
</resources>
